RESOLVED FIXED147497
REGRESSION (r174791): Returning a zombie NSImage from sharingService:transitionImageForShareItem:contentRect:
https://bugs.webkit.org/show_bug.cgi?id=147497
Summary REGRESSION (r174791): Returning a zombie NSImage from sharingService:transiti...
Brady Eidson
Reported 2015-07-31 12:38:00 PDT
REGRESSION (r174791): Returning a zombie NSImage from sharingService:transitionImageForShareItem:contentRect: Easy fix with a [[retain] autorelease] rdar://problem/22060183
Attachments
Patch v1 (1.37 KB, patch)
2015-07-31 12:40 PDT, Brady Eidson
thorton: review+
Brady Eidson
Comment 1 2015-07-31 12:40:54 PDT
Created attachment 257945 [details] Patch v1
Brady Eidson
Comment 2 2015-07-31 12:44:02 PDT
Note You need to log in before you can comment on or make changes to this bug.