REGRESSION (r174791): Returning a zombie NSImage from sharingService:transitionImageForShareItem:contentRect: <rdar://problem/22060183> and https://bugs.webkit.org/show_bug.cgi?id=147497

Reviewed by Tim Horton.

* WebCoreSupport/WebContextMenuClient.mm:
(WebContextMenuClient::imageForCurrentSharingServicePickerItem): Don't return what is basically a temporary NSImage.
  Instead do a [[retain] autorelease] on it while still valid.

Canonical link: https://commits.webkit.org/165574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187669 268f45cc-cd09-0410-ab3c-d52691b4dbfc